--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -26,6 +25,8 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "fluid-tailwind": "^1.0.3",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.40",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
