--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format:check": "prettier --check 'src/**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
+    "ldrs": "^1.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
