--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ldrs": "^1.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
+    "motion": "^12.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
