--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.8",
+    "clsx": "^2.1.1",
     "ldrs": "^1.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
@@ -23,6 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
+    "tailwind-merge": "^3.3.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
