--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^19.1.0",
     "react-hotkeys-hook": "^5.1.0",
     "react-router": "^7.7.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "1.0.12",
