--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "isbot": "^5.1.27",
+    "ldrs": "^1.1.9",
     "lucide-react": "^0.525.0",
     "ordinal": "^1.0.3",
     "react": "^19.1.0",
